[package]
name = "rustle"
version = "0.1.0"
authors = ["Vishal Dodiya <vdodiya03@gmail.com>"]
edition = "2018"
description = "rustle a markdown compiler create blog"
homepage = "https://github.com/vishaldodiya/rustle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
